--- a/app/pages/main/home/player/stat-events/stat-events.html
+++ b/app/pages/main/home/player/stat-events/stat-events.html
@@ -116,7 +116,7 @@
             </div>
         </div>-->
     </div>
-     <ion-spinner name="bubbles"  style="display:block;margin:auto"  [style.visibility]="dataLoading? 'visible' : 'hidden'"></ion-spinner>
+     <ion-spinner name="ios-small"  style="display:block;margin:auto"  [style.visibility]="dataLoading? 'visible' : 'hidden'"></ion-spinner>
     </div>
     <!--    <div *ngSwitchCase="'league'">
            <ion-list-header text-wrap>Zero Gravity Fall 2016 - New England Circut</ion-list-header>
