--- a/app/pages/main/home/update-player/update-player.html
+++ b/app/pages/main/home/update-player/update-player.html
@@ -122,6 +122,6 @@
         </ion-list>
     </ion-card>
 
-    <ion-spinner name="bubbles" style="display:block;margin:auto" [style.visibility]="dataLoading? 'visible' : 'hidden'"></ion-spinner>
+    <ion-spinner name="ios-small" style="display:block;margin:auto" [style.visibility]="dataLoading? 'visible' : 'hidden'"></ion-spinner>
 
 </ion-content>
