--- a/app/pages/main/settings/settings-list.html
+++ b/app/pages/main/settings/settings-list.html
@@ -4,12 +4,12 @@
 
         <ion-title>Settings</ion-title>
 
-        <ion-buttons end>
+      <!--  <ion-buttons end>
             <button (click)="dismiss()">
                 <span showWhen="ios">Done</span>
                 <ion-icon name="md-close" showWhen="android,windows"></ion-icon>
             </button>
-        </ion-buttons>
+        </ion-buttons>-->
 
     </ion-navbar>
 </ion-header>
