--- a/app/pages/main/events/event/event-brackets/brackets.html
+++ b/app/pages/main/events/event/event-brackets/brackets.html
@@ -194,5 +194,5 @@
         </ion-grid>
     </ion-card>-->
 
- <ion-spinner name="bubbles"  style="display:block;margin:auto"  [style.visibility]="dataLoading? 'visible' : 'hidden'"></ion-spinner>
+ <ion-spinner name="ios-small"  style="display:block;margin:auto"  [style.visibility]="dataLoading? 'visible' : 'hidden'"></ion-spinner>
 </ion-content>
